--- a/person-parent/research-person-api/pom.xml
+++ b/person-parent/research-person-api/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>research-person-entities</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.kalix.research</groupId>
+            <artifactId>research-person-dto</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <packaging>bundle</packaging>
 
