修改学生信息查询服务，新增数据权限

--- a/core-parent/research-core-etc/src/main/resources/config.research.app.cfg
+++ b/core-parent/research-core-etc/src/main/resources/config.research.app.cfg
@@ -53,7 +53,7 @@ MENU_PERSONTEACHER_PERMISSION	=	1
 MENU_PERSONTEACHER_BUTTONS	=	\u6DFB\u52A0,add;\u522A\u9664,delete;\u4FEE\u6539,edit;\u67E5\u770B,view
 
 #Person_Student
-MENU_PERSONSTUDENT_ID	=	personStudentMenu
+MENU_PERSONSTUDENT_ID	=	studentMenu
 MENU_PERSONSTUDENT_APPLICATION_ID	 =	research
 MENU_PERSONSTUDENT_MODULE_ID = researchPersonModule
 MENU_PERSONSTUDENT_TEXT = \u5B66\u751F\u4FE1\u606F
