调整展赛管理功能服务

--- a/core-parent/research-core-etc/src/main/resources/config.research.dict.cfg
+++ b/core-parent/research-core-etc/src/main/resources/config.research.dict.cfg
@@ -1,5 +1,5 @@
 #dict cache in redix
 research_dict_cache_timeout=599
 #dict type
-research_dict_types=\u5C55\u8D5B\u7C7B\u522B
+research_dict_types=\u5C55\u8D5B\u7C7B\u522B,\u6027\u522B,\u7701\u4EFD
 
